# Laplace

./: .gitignore  AGENTS.md  CHANGES.md  CMakeLists.txt  README.md  longprompt.txt  shortprompt.txt
agents/: autoreview-claude.md  autoreview-contract.md  autoreview-eni.md
research/: GEMMA4_SPEC.md  LAPLACE_KV.md  REPORT-2026-07.md  REPORT.md
research/laplace_kv/: ALPHABET_FRONTIER_AUDIT.md  CANDIDATE.md  CANDIDATE_BFP3.md  CANDIDATE_L3_B.md  CANDIDATE_L3_C.md  CANDIDATE_STRIPE.md  CAUSAL_DIRECT_AUDIT.md  CODEC_AUDIT.md  CYBERPUNK_TECH_LORE.md  DESIGN_SPACE_AUDIT.md  ENTROPY_KERNEL_AUDIT.md  EOPTSHRINKQ_AUDIT.md  EOPT_DIRECT_KERNEL_AUDIT.md  FIXED_K4V2_BENCH.md  FROZEN_WEIGHT_MATH_AUDIT.md  GENERALIZED_WEIGHTED_AUDIT.md  JULY_2026_FRONTIER_AUDIT.md  KV_PREDICTIVE_AUDIT.md  MIXED_RADIX_AUDIT.md  NATIVE_CONTEXT_RANS_BENCH.md  PREROPE_FIXED_AUDIT.md  PROTOCOL.md  REGENERATION_CACHE_AUDIT.md  RESULTS.md  SHARED_QUANTIZER_AUDIT.md  SYNDROME_EMBEDDING_AUDIT.md  SYNDROME_METADATA_NOVELTY.md  TAIL_HUFFMAN_AUDIT.md  VLLM_025_AUDIT.md  WEIGHTED_SPECTRAL_AUDIT.md  WEIGHT_METRIC_EXTRACTION.md  WEIGHT_METRIC_PRIOR_ART.md  WH_METRIC_AUDIT.md  bench_context_rans_native.cpp  bench_eopt_direct_native.cpp  bench_fixed_k4v2_native.cpp  extract_weight_metrics.cpp  prototype_affine_invariant.py  prototype_allocator.py  prototype_alphabet_sweep.py  (+32 more)
research/laplace_kv/corpora/: adverse_v1.txt  code_v1.txt
scripts/: download_model.py  gguf_header.py
src/: arch.h  arch_gemma4.cpp  arch_gemma4.h  arch_llama.cpp  arch_llama.h  arch_phi3.cpp  arch_phi3.h  arch_qwen3next.cpp  arch_qwen3next.h  fp16.h  gguf.cpp  gguf.h  kernels.h  kvcache.cpp  kvcache.h  laplace_arch.cpp  laplace_kv.cpp  laplace_kv.h  laplace_moe.cpp  laplace_moe.h  main.cpp  matmul.cpp  matmul.h  matmul_simd.cpp  metal.mm  mmap.cpp  mmap.h  model.cpp  model.h  ops.cpp  ops.h  power_monitor.h  safetensors.cpp  safetensors.h  sampler.cpp  sampler.h  ssm.cpp  ssm.h  tensor.h  threadpool.h  (+3 more)
tests/: bench_cpu_gpu.cpp  bench_kvcache.cpp  bench_threadpool.cpp  gguf_writer.h  quant_ref.h  test_arch.cpp  test_gguf.cpp  test_kvcache.cpp  test_laplace_kv.cpp  test_matmul.cpp  test_metal.cpp  test_safetensors.cpp  test_sampler.cpp  test_tokenizer.cpp  test_util.h
tools/: dump_meta.cpp  list_tensors.cpp  validate_laplace_kv.py
